--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1107,7 +1107,9 @@ img {
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
-                    cursor: pointer;
+                    span{
+                        cursor: pointer;
+                    }
 
                     @media (max-width: 1100px) {
                         font: 11px "Brandon Medium";
